--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
-    <title>云西府精装发布会</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0" />
+    <meta http-equiv="Access-Control-Allow-Origin" content="*" />
+    <title>长房·云西府精装发布会</title>
 
     <script src="//g.alicdn.com/fdilab/lib3rd/viewport-units-buggyfill/0.6.2/??viewport-units-buggyfill.hacks.min.js,viewport-units-buggyfill.min.js"></script>
 </head>
@@ -15,8 +16,8 @@
         window.onload = function() {
             window.viewportUnitsBuggyfill.init({
                 hacks: window.viewportUnitsBuggyfillHacks
-            });
-        };
+            })
+        }
     </script>
 </body>
 
